--- a/app/templates/partials/work_experience.hbs
+++ b/app/templates/partials/work_experience.hbs
@@ -1,9 +1,9 @@
 <hr/>
 
-<h4><i class="fa fa-wrench"></i> Brand Experience</h4>
+<h4><i class="fa fa-wrench"></i> Project Experience</h4>
 
 <p>
-    Provided services ranging from small projects to long term relationships for global brands.
+    Provided services ranging from small projects for independent entrepreneurs, to long term relationships for global organizations.
 </p>
 
 <div class="logo-list">
@@ -22,7 +22,7 @@
 <h4><i class="fa fa-fire"></i> Recognition</h4>
 
 <p>
-    Key technical member on dozens of projects celebrated by industry tastemakers. <a href="{{settings.PORTFOLIO_LINKEDIN}}" target="_blank">Learn more</a>.
+    Collaborated on dozens of honored &amp; awarded projects. <a href="{{settings.PORTFOLIO_LINKEDIN}}" target="_blank">Learn more</a>.
 </p>
 
 <div class="logo-list">
