update offcanvasNav to use classes, fix cursor

--- a/app/styles/scss/bootstrap/_base-elements.scss
+++ b/app/styles/scss/bootstrap/_base-elements.scss
@@ -49,6 +49,7 @@ p{
   background-color:#fff;
   position:relative;
   z-index:2;
+  min-height: 100vh;
 }
 
 // only ios has docked - see navbar.scss for pared cases
