add settings for footer nav toggle

--- a/app/templates/blog/pages/index.hbs
+++ b/app/templates/blog/pages/index.hbs
@@ -8,5 +8,5 @@ tags:
 published: true
 pathToRoot: '..'
 activeTab: 'blog'
-showFooterConnectSection: 'true'
+omitFooterNavSection: <%= settings.PORTFOLIO_FOOTER_NAV_OMIT %>
 ---
