--- a/app/templates/pages/index.hbs
+++ b/app/templates/pages/index.hbs
@@ -3,7 +3,7 @@ title: <%= settings.PORTFOLIO_SITE_TITLE %>
 layout: app/templates/layouts/default.hbs
 pathToRoot: '.'
 activeTab: ''
-showFooterConnectSection: settings.PORTFOLIO_FOOTER_CONNECT_SHOW
+omitFooterConnectSection: <%= settings.PORTFOLIO_FOOTER_CONNECT_OMIT %>
 ---
 <main role="main">
     {{>intro}}
