set active tab for blog posts

--- a/app/templates/blog/posts/test-post.hbs
+++ b/app/templates/blog/posts/test-post.hbs
@@ -19,6 +19,7 @@ micro-image: http://placehold.it/240x135
 header-image: http://placehold.it/1182x665
 header-image-caption: "<a href='http://google.com'>Meditation caption</a>. Image: Moyan Brenn, Flickr"
 pathToRoot: '../..'
+activeTab: 'blog'
 ---
 {{#markdown}}
 ### Overview
