add setting, blog twitter embed optional

--- a/app/templates/blog/partials/post_index.hbs
+++ b/app/templates/blog/partials/post_index.hbs
@@ -40,12 +40,13 @@
 </div>
 
 
+{{#is settings.BLOG_HAS_TWITTER_EMBED "true"}}
+  <div class="content-twitter-wrap sectionSplitter">
 
-<div class="content-twitter-wrap sectionSplitter">
-
-  <div class="content-twitter">
-    <a class="twitter-timeline" href="https://twitter.com/{{settings.TWITTER_USERNAME}}" data-widget-id="{{settings.BLOG_TWITTER_WIDGET_ID}}">Tweets by @{{settings.TWITTER_USERNAME}}</a>
-    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    <div class="content-twitter">
+      <a class="twitter-timeline" href="https://twitter.com/{{settings.TWITTER_USERNAME}}" data-widget-id="{{settings.BLOG_TWITTER_WIDGET_ID}}">Tweets by @{{settings.TWITTER_USERNAME}}</a>
+      <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    </div>
   </div>
-</div>
+{{/is}}
 
