--- a/app/styles/css/blog.css
+++ b/app/styles/css/blog.css
@@ -7761,6 +7761,8 @@ nav[role=footer] {
   .video-js.vjs-my-skin .vjs-control:focus:before, .video-js.vjs-my-skin .vjs-control:hover:before, .video-js.vjs-my-skin .vjs-control:focus {
     opacity: 0.8;
     text-shadow: none; }
+  .video-js.vjs-my-skin:hover .vjs-big-play-button {
+    background-color: #dc302d; }
   .video-js.vjs-my-skin .vjs-volume-control {
     display: none; }
   .video-js.vjs-my-skin .vjs-mouse-display, .video-js.vjs-my-skin .vjs-play-progress, .video-js.vjs-my-skin .vjs-control-text {
