--- a/app/templates/partials/work.hbs
+++ b/app/templates/partials/work.hbs
@@ -12,9 +12,9 @@
   <!-- END WORK DETAIL -->
   <div ng-show="state == STATE_DETAIL" class="ng-cloak">
     <div class="work-btm" >
-      <div class="work-nav-btm "  >
+      <div class="work-nav-btm">
         <div class="btn-group work-nav-group">
-            <a href="" class="btn btn-sm btn-primary" ng-click="projectIncrement(-1)"><i class="fa fa-arrow-left"></i></a><a href="" class="btn btn-sm btn-primary" ng-click="utils.scrollAnimateTo('#work')"><i class="fa fa-arrow-up"></i></a><a href="" class="btn btn-sm btn-primary" ng-click="projectIncrement(1)"><i class="fa fa-arrow-right"></i> </a>
+            <a href="" class="btn btn-sm btn-primary" button-blur ng-click="projectIncrement(-1)"><i class="fa fa-arrow-left"></i></a><a href="" class="btn btn-sm btn-primary" button-blur ng-click="utils.scrollAnimateTo('#work')"><i class="fa fa-arrow-up"></i></a><a href="" class="btn btn-sm btn-primary" button-blur ng-click="projectIncrement(1)"><i class="fa fa-arrow-right"></i> </a>
         </div>
       </div>
     </div>
