--- a/app/templates/partials/work_detail.hbs
+++ b/app/templates/partials/work_detail.hbs
@@ -2,7 +2,7 @@
   <header class="detail-title-wrap">
     <div class="work-nav" >
       <div class="btn-group work-nav-group">
-        <a href="" class="btn btn-sm btn-primary" ng-click="projectIncrement(-1)"><i class="fa fa-arrow-left"></i></a><a href="" class="btn btn-primary btn-sm" ng-click="projectIncrement(1)"><i class="fa fa-arrow-right"></i></a>
+        <a href="" class="btn btn-sm btn-primary" button-blur ng-click="projectIncrement(-1)"><i class="fa fa-arrow-left"></i></a><a href="" class="btn btn-primary btn-sm" button-blur ng-click="projectIncrement(1)"><i class="fa fa-arrow-right"></i></a>
       </div>
     </div>
     <div class="detail-title">
@@ -26,31 +26,37 @@
       <video  ng-switch-when="video"
               video-js-embed="item"
               id="video-player"
-              class="item-video item-media video-js vjs-default-skin vjs-my-skin"
+              class="item-video item-media video-js vjs-default-skin vjs-my-skin loading-ani"
               controls
               >
-
-              <p class="vjs-no-js">
-    To view this video please enable JavaScript, and consider upgrading to a web browser
-    that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
-  </p>
+        <p class="vjs-no-js">
+          To view this video please enable JavaScript, and consider upgrading to a web browser
+          that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a>
+        </p>
       </video>
-
      </div>
   </div>
 
   <ul class="detail-links" ng-show="workCur.projectLinksArr.length > 0">
-    <li ng-repeat="item in workCur.projectLinksArr"><a  href="{[item.href]}" class="btn btn-default btn-sm" target="_blank" angular-bind-html="item.label"></a></li>
+    <li ng-repeat="item in workCur.projectLinksArr"><a href="{[item.href]}" button-blur class="btn btn-default btn-sm" target="_blank" angular-bind-html="item.label"></a></li>
   </ul>
 
   <section class="detail-desc-wrap">
     <div class="detail-desc">
-      <div class="detail-post-meta ng-cloak" ng-show="workCur.read_time || workCur.timestamp">
-        <span class="detail-read-time ng-cloak" ng-show="workCur.read_time">
-          <i class="fa fa-bookmark"></i> {[workCur.read_time]} min read
+      <div class="detail-post-meta ng-cloak" ng-show="workCur.role || workCur.readTime || workCur.videoTime || workCur.date">
+        <span class="detail-role ng-cloak" ng-show="workCur.role" >
+          <i class="fa fa-user"></i> <span>Role: {[workCur.role]}</span>
         </span>
-        <span class="detail-timestamp ng-cloak" ng-show="workCur.timestamp" >
-          <i class="fa fa-calendar"></i> <span><time pubdate="{[workCur.timestamp]}">{[workCur.timestamp | amDateFormat:'YYYY MMMM Do']}</time></span>
+        <span class="detail-timestamp ng-cloak" ng-show="workCur.date" >
+          <i class="fa fa-calendar"></i> <span><time pubdate="{[workCur.date]}">{[workCur.date]}</time></span>
+        </span>
+        </span>
+
+        <span class="detail-timestamp ng-cloak" ng-show="workCur.videoTime" >
+          <i class="fa fa-video-camera"></i> <span>{[workCur.videoTime]} min video</span>
+        </span>
+        <span class="detail-read-time ng-cloak" ng-show="workCur.readTime">
+          <i class="fa fa-bookmark"></i> {[workCur.readTime]} min read
         </span>
       </div>
 
@@ -74,17 +80,15 @@
 
       <div class="detail-sub-info" ng-show="workCur.teamProcessedArr.length > 0">
         <div class="team">
-            <h4 class="title"><i class="icon-user icon"></i> Humans</h4>
+          <h4 class="title">Humans</h4>
 
-            <ul class="list">
-                <li ng-repeat="item in workCur.teamProcessedArr"><em><span angular-bind-html="item.role" class="role"></span></em><br/>
-                  <div angular-bind-html="item.humans" class="indent"></div></li>
-            </ul>
-          </div>
+          <ul class="list">
+            <li ng-repeat="item in workCur.teamProcessedArr" class="xcol-xs-6"><em><span angular-bind-html="item.role" class="role"></span></em><br/>
+              <div angular-bind-html="item.humans" class="indent"></div></li>
+          </ul>
+        </div>
       </div>
-
     </div>
-
 
   </section>
 </article>
