Blog link loads from settings
Need to be able to cross link from another domain

--- a/app/templates/blog/partials/post_head.hbs
+++ b/app/templates/blog/partials/post_head.hbs
@@ -1,6 +1,6 @@
 <div class="detail-title-wrap">
   <div class="detail-title">
-    <h4 class="detail-breadcrumb"><a href="{{pathToRoot}}/blog">Blog</a> &raquo; {{first page.categories}}</h4>
+    <h4 class="detail-breadcrumb"><a href="{{settings.BLOG_URL}}">Blog</a> &raquo; {{first page.categories}}</h4>
     <h1 class="title">{{title}}</h1>
     <!-- {{#if description}} <p class="desc">{{description}}</p>{{/if}} -->
     {{>post_meta}}
