--- a/app/templates/blog/partials/post_index.hbs
+++ b/app/templates/blog/partials/post_index.hbs
@@ -20,7 +20,7 @@
   </div>
 </div>
 }}
-<h4 class="detail-breadcrumb"><a href="{{pathToRoot}}/blog">Blog</a> &raquo; Work &amp; Life</h4>
+<h4 class="detail-breadcrumb"><a href="{{settings.BLOG_URL}}">Blog</a> &raquo; Work &amp; Life</h4>
 <div class="link-group-wrap">
   <div class="link-group">
   <ul class="link-list">
