--- a/app/templates/partials/footer.hbs
+++ b/app/templates/partials/footer.hbs
@@ -13,7 +13,7 @@
           {{#is settings.PORTFOLIO_ABOUT_SHOW 'true'}}
             <li><a href="{{pathToRoot}}/#about" util-change-path="/about" ><i class="fa fa-male fa-lg"></i>About</a></li>
           {{/is}}
-          <li><a href="{{pathToRoot}}/blog"><i class="fa fa-comment fa-lg"></i>Blog</a></li>
+          <li><a href="{{settings.BLOG_URL}}"><i class="fa fa-comment fa-lg"></i>Blog</a></li>
         </ul>
 
       </nav>
