--- a/app/templates/partials/social_media.hbs
+++ b/app/templates/partials/social_media.hbs
@@ -25,7 +25,7 @@
 
   <div class="cta-btns">
       <ul>
-        <li><a href="{{pathToRoot}}/blog" class="btn btn-success"><i class="fa fa-lg fa-book"></i> Blog</a></li>
+        <li><a href="{{settings.BLOG_URL}}" class="btn btn-success"><i class="fa fa-lg fa-book"></i> Blog</a></li>
 
         <li>{{>subscribe}}</li>
 
