--- a/app/templates/partials/inc_btm_tags.hbs
+++ b/app/templates/partials/inc_btm_tags.hbs
@@ -1,19 +1,14 @@
+{{#if production}}
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-
-<script>
-
-/*
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', '{{settings.GA_ID}}', '{{settings.PRODUCTION_HOSTNAME}}');
-  ga('send', 'pageview');
-  */
-
-</script>
-
+    ga('create', '{{settings.GA_ID}}', '{{settings.PRODUCTION_HOSTNAME}}');
+    ga('send', 'pageview');
+  </script>
+{{/if}}
 
 {{#contains absolute "/blog/"}}
   {{#isnt basename "index"}}
